Feature set: Build a Pomodoro Timer that tracks a 30 minute Pomodoro session (25 mins working, 5 min break)

--- a/Views/Home/_Pomodoro.cshtml
+++ b/Views/Home/_Pomodoro.cshtml
@@ -4,6 +4,6 @@
     var Test = Model.Id;
 }
 
-<div>
-    <x-clock></x-clock>
-</div>
+<x-animate></x-animate>
+<x-task-panel></x-task-panel>
+<x-pomodoro></x-pomodoro>
