Final feature set commt. Users should enter a task they wish to complete in their 25 minute work period before being allowed to start the timer

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
     <script src="~/js/components/x-pomodoro.js"></script>
     <script src="~/js/components/x-animate.js"></script>
     <script src="~/js/components/x-control.js"></script>
+    <script src="~/js/components/x-form.js"></script>
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
